--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Redirecting to http://web.cs.ucla.edu/~sihao/</title>
-<meta http-equiv="refresh" content="0; URL=http://web.cs.ucla.edu/~sihao//">
-<link rel="canonical" href="http://web.cs.ucla.edu/~sihao//">
+<title>Redirecting to https://web.cs.ucla.edu/~sihao/</title>
+<meta http-equiv="refresh" content="0; URL=https://web.cs.ucla.edu/~sihao">
+<link rel="canonical" href="https://web.cs.ucla.edu/~sihao">
 
